k8s/user-apps/ldjam-highscores/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldjam-highscores
  labels: &labels
    app.kubernetes.io/name: ldjam-highscores
spec:
  replicas: 5
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: highscores-server
          image: git.ftsell.de/ldjam-sep-2023/highscores
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              port: http
              httpHeaders:
                - name: Host
                  value: "highscores.ftsell.de"
          resources:
            requests:
              memory: "50Mi"
              cpu: "0.01"
            limits:
              memory: "250Mi"
              cpu: "0.5"
