k8s/user-apps/ldjam-highscores/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ldjam-highscores
  labels: &labels
    app.kubernetes.io/name: ldjam-highscores
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
